# CMakeList.txt : CMake project for TCPServerMultipleConnectionTutorial, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("TCPServerMultipleConnectionTutorial")

# Add source to this project's executable.
add_executable (TCPServerMultipleConnectionTutorial "TCPServerMultipleConnectionTutorial.cpp" "TCPServerMultipleConnectionTutorial.h")

# TODO: Add tests and install targets if needed.
